Added footer and other formatting.

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 	<link type="text/css" rel="stylesheet" href="css/reset.css"/>
 	<link type="text/css" rel="stylesheet" href="css/style.css"/>
 	</head>
+
 <body>
 <div class="header">
 	<h1>Relaxr</h1>
@@ -18,7 +19,6 @@
 		<br/>
 	<button class="getit" type="getit" value="getit"/>Get it Now</button>
 	</div>
-
 <p>
 <div class="benefits">
 <h3>Benefits</h3>
@@ -43,16 +43,22 @@ The perfect personal assistant. Relaxr does your job<br/>for you so you can enjo
 - Amanda, Intuit
 </div>
 </div>
-<button>Sign Up Now!</button>
+<button class="signup" type="signup" value="signup"/>Sign Up Now!</button>
+
 <footer>
 <div id="footer">
+<div span id="logo">
 Relaxr
+</div>
 <br/>
 <a href="http://www.twitter.com"><img src="images/twitter.png" alt="twitter"></a>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 <a href="http://www.facebook.com"><img src="images/facebook.png"></a>
+<br/>
 <div class='copyright'>&copy; 2016. Relaxr.</div>
 </div>
 </footer>
+
 </body>
 </html>
 
