--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@ The perfect personal assistant. Relaxr does your job<br/>for you so you can enjo
 	<li>Does all your work for you with our<br/>revolutionary AI technology</li>
 </ul>
 </div>
+
 <div class="testimonial">
 "Relaxr changed my life. I've been able<br/> to travel the world, spend limited time<br/> working and my boss keeps thanking<br/> me for crushing work."
 <br/>
@@ -43,7 +44,10 @@ The perfect personal assistant. Relaxr does your job<br/>for you so you can enjo
 - Amanda, Intuit
 </div>
 </div>
-<button class="signup" type="signup" value="signup"/>Sign Up Now!</button>
+
+<section id="signup">
+<button><div id="button">Sign Up Now!</button></div>
+</section>
 
 <footer>
 <div id="footer">
